--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
 <body>
 
   <header>
-    <img src="photo.jpg" class="profile-pic" alt="Profile Picture">
+    <img src="/photo.jpg" class="profile-pic" alt="Profile Picture">
     <h1>ATUL GAIKWAD</h1>
     <h2>Electronics & Telecommunication Engineering | MITAOE</h2>
   </header>
