--- a/index.html
+++ b/index.html
@@ -139,13 +139,13 @@
     <h2>Certificates / Achievements</h2>
     <div class="cert-grid">
       <div class="cert-container">
-        <img src="c:\Users\ASUS\Pictures\Screenshots\Screenshot 2025-04-23 223425.png" alt="Certificate 1">
+        <img src="/cisco python essential 1.jpg" alt="Certificate 1">
       </div>
       <div class="cert-container">
-        <img src="c:\Users\ASUS\Pictures\Screenshots\Screenshot 2025-04-23 223526.png" alt="Certificate 2">
+        <img src="/cisco python essential 2.jpg" alt="Certificate 2">
       </div>
       <div class="cert-container">
-        <img src="c:\Users\ASUS\Pictures\Screenshots\Screenshot 2025-04-23 223648.png" alt="Certificate 3">
+        <img src="/hacker rank python certificate.jpg" alt="Certificate 3">
       
       </div>
     </div>
