--- a/index.html
+++ b/index.html
@@ -146,7 +146,6 @@
       </div>
       <div class="cert-container">
         <img src="/hacker rank python certificate.jpg" alt="Certificate 3">
-      
       </div>
     </div>
   </section>
@@ -161,7 +160,7 @@
 
   <section id="resume">
     <h2>My Resume</h2>
-    <iframe src="c:\Users\ASUS\Pictures\Screenshots\Screenshot 2025-04-24 145620.png" style="width:80%; height:500px; border:none; border-radius:10px;"></iframe>
+    <iframe src="resume.jpg" style="width:80%; height:500px; border:none; border-radius:10px;"></iframe>
   </section>
 
   <section id="contact">
