--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
 <body>
 
   <header>
-    <img src="/photo.jpg" class="profile-pic" alt="Profile Picture">
+    <img src="photo.jpg" class="profile-pic" alt="Profile Picture">
     <h1>ATUL GAIKWAD</h1>
     <h2>Electronics & Telecommunication Engineering | MITAOE</h2>
   </header>
@@ -139,13 +139,13 @@
     <h2>Certificates / Achievements</h2>
     <div class="cert-grid">
       <div class="cert-container">
-        <img src="/cisco python essential 1.jpg" alt="Certificate 1">
+        <img src="cisco python essential 1.jpg" alt="Certificate 1">
       </div>
       <div class="cert-container">
-        <img src="/cisco python essential 2.jpg" alt="Certificate 2">
+        <img src="cisco python essential 2.jpg" alt="Certificate 2">
       </div>
       <div class="cert-container">
-        <img src="/hacker rank python certificate.jpg" alt="Certificate 3">
+        <img src="hacker rank python certificate.jpg" alt="Certificate 3">
       </div>
     </div>
   </section>
