--- a/index.html
+++ b/index.html
@@ -160,7 +160,9 @@
 
   <section id="resume">
     <h2>My Resume</h2>
-    <iframe src="resume.jpg" style="width:80%; height:500px; border:none; border-radius:10px;"></iframe>
+    <div class="cert-container">
+      <img src="resume.jpg" alt="My Resume">
+    </div>
   </section>
 
   <section id="contact">
@@ -177,3 +179,4 @@
 </body>
 
 </html>
+
