--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
     <div class="cert-container">
       <iframe src="resume.jpg" style="width:80%; height:500px; border:none; border-radius:10px;"></iframe>
 
-     
+      <img src="resume.jpg" alt="My Resume">
     </div>
   </section>
 
