--- a/index.html
+++ b/index.html
@@ -159,13 +159,12 @@
   </section>
 
   <section id="resume">
-    <h2>My Resume</h2>
-    <div class="cert-container">
-      <iframe src="resume.jpg" style="width:80%; height:500px; border:none; border-radius:10px;"></iframe>
+  <h2>My Resume</h2>
+  <div class="cert-container">
+    <img src="resume.jpg" alt="My Resume">
+  </div>
+</section>
 
-     
-    </div>
-  </section>
 
   <section id="contact">
     <h2>Contact</h2>
