--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
   <section id="resume">
   <h2>My Resume</h2>
   <div class="cert-container">
-    <img src="resume.jpg" alt="My Resume">
+    <iframe src="resume.jpg" style="width:80%; height:500px; border:none; border-radius:10px;"></iframe>
   </div>
 </section>
 
