--- a/index.html
+++ b/index.html
@@ -158,10 +158,10 @@
     </ul>
   </section>
 
-  <section id="resume">
+ <section id="resume">
   <h2>My Resume</h2>
   <div class="cert-container">
-    <iframe src="resume.jpg" style="width:80%; height:500px; border:none; border-radius:10px;"></iframe>
+    <img src="resume.jpg" alt="My Resume" style="width:100%; max-width:900px; border-radius:12px; box-shadow: 0 0 12px rgba(0,0,0,0.3);">
   </div>
 </section>
 
